# diaries-LOT-task

./: .gitignore  README.md  db.sqlite3  manage.py  package.json  pyproject.toml
accounts/: views.py
diaries/: asgi.py  settings.py  urls.py  wsgi.py
diaries-web/: .eslintcache  package-lock.json  package.json
diaries-web/public/: index.html
diaries-web/src/: App.js  index.js
diaries/rest_api/: dev.py
posts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/api/: urls.py  views.py
posts/migrations/: 0001_initial.py  0002_post_user.py  0003_auto_20210124_1337.py  0004_auto_20210127_2037.py
profiles/: forms.py  models.py  serializers.py  tests.py  views.py
profiles/api/: urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20210127_2100.py
static-root/css/: main.7d23a9e7.chunk.css  main.7d23a9e7.chunk.css.map
static-root/js/: 2.47ec1858.chunk.js.map  2.710f2db1.chunk.js  2.710f2db1.chunk.js.map  2.a643eb34.chunk.js  2.a643eb34.chunk.js.map  2.ce95f239.chunk.js  2.ce95f239.chunk.js.map  3.2abaab19.chunk.js  3.2abaab19.chunk.js.map  3.9ac4f46c.chunk.js  3.9ac4f46c.chunk.js.map  3.ec67dd02.chunk.js  main.22763169.chunk.js  main.22763169.chunk.js.map  main.3b4e6698.chunk.js  main.3b4e6698.chunk.js.map  main.4b70ebdf.chunk.js  main.4b70ebdf.chunk.js.map  main.5e4f8f88.chunk.js  main.5e4f8f88.chunk.js.map  main.6861f8d9.chunk.js  main.6861f8d9.chunk.js.map  main.887df6d8.chunk.js  main.887df6d8.chunk.js.map  main.963d6599.chunk.js  main.963d6599.chunk.js.map  (+5 more)
templates/: base.html  react.html
(+35 files in other folders)
